# cytoself

./: README.md  pyproject.toml
.github/workflows/: pytest-codecov-conda.yml
cytoself/analysis/: analysis_opencell.py
cytoself/datamanager/: custom.py  custom_manager.py  opencell.py
cytoself/trainer/: basetrainer.py  cytoselffull_trainer.py  cytoselflite_trainer.py  vanilla_trainer.py  vqvae_trainer.py  vqvaefc_trainer.py
cytoself/trainer/utils/: ddp_setup.py
example_scripts/: cytoself_specs.md  general_modules.py  simple_example.py
example_scripts/custom_training/: custom_train.py
