[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "cytoself"
version = "0.1.5.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "umap-learn",
    "pandas==2.3.1",
    "matplotlib==3.10.3",
    "joblib==1.5.1",
    "tqdm",
    "natsort",
    "tensorboard",
    "colorcet",
    "seaborn",
    "scipy",
    "gdown",

]
